--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    * {
+        @apply box-border
+    }
+
+	body {
+		@apply font-body text-center bg-gray-300 m-0;
+	}
+}
